modify ui, add output table

--- a/index.html
+++ b/index.html
@@ -246,9 +246,40 @@
 				<button id="startProgram">
 					Рассчет
 				</button>
+				<button id="row_add">
+					Добавить участок
+				</button>
+				<button id="delete_row">
+					Удалить участок
+				</button>
 			</div>
 			<div class="rightColumn">
 				
+			</div>
+			<div class="resultSection">
+				<table class="result_table">
+					<tr class="name_row">
+						<td>Nn</td>
+						<td>Nk</td>
+						<td>R0</td>
+						<td>X0</td>
+						<td>Snom</td>
+						<td>Dlina</td>
+						<td>Ao</td>
+						<td>Active</td>
+						<td>reactive</td>
+						<td>P</td>
+						<td>Q</td>
+						<td>dP</td>
+						<td>dQ</td>
+						<td>Wp</td>
+						<td>Wq</td>
+						<td>dW</td>
+						<td>dPxx</td>
+						<td>Uk</td>
+						<td>dQxx</td>
+					</tr>
+				</table>
 			</div>
 		</section>
 	</div>
