--- a/index.html
+++ b/index.html
@@ -368,9 +368,11 @@
 				<button class="draw_chart">
 					нарисовать
 				</button>
-				<canvas id="draw_area" width="1700" height="700">
-					
-				</canvas>
+				<div class="display_circiut_container">	
+					<canvas id="draw_area" width="1700" height="1000">
+						
+					</canvas>
+				</div>	
 			</div>
 		</section>
 	</div>
