--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 	<link rel="stylesheet" type="text/css" href="jquery-ui/jquery-ui.css">
 	<link rel="stylesheet" type="text/css" href="css/screen.css">
 	<script type="text/javascript" src="https://www.gstatic.com/charts/loader.js" defer></script>
-	<script type="text/javascript" src="js/jquery.js"></script>
-	<script type="text/javascript" src="jquery-ui/jquery-ui.js"></script>
-	<script src="vendor/bootstrap/js/bootstrap.min.js"></script>
+	<script type="text/javascript" src="js/jquery.js" defer></script>
+	<script type="text/javascript" src="jquery-ui/jquery-ui.js" defer></script>
+	<script src="vendor/bootstrap/js/bootstrap.min.js" defer></script>
 	<script type="text/javascript" src="js/main.js" defer></script>
 	<script type="text/javascript" src="js/canvas.js" defer></script>
 	<script type="text/javascript" src="js/charts.js" defer></script>
