--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 				</strong>
 				<form id="inputDataForm">
 					<div class="rows">
-					 	<select name="lineType" id="mySelect">
+					 	<select name="lineType" class="mySelect">
 					    	<option data-line-type="line" selected="selected">Линия</option>
 					    	<option data-line-type="transformer">Трансформатор</option>
 					    </select>
@@ -65,7 +65,7 @@
 						</div>
 					</div>
 					<div class="rows">
-					 	<select name="lineType" id="mySelect">
+					 	<select name="lineType" class="mySelect">
 					    	<option data-line-type="line" selected="selected">Линия</option>
 					    	<option data-line-type="transformer">Трансформатор</option>
 					    </select>
@@ -89,7 +89,7 @@
 						</div>
 					</div>
 					<div class="rows">
-					 	<select name="lineType" id="mySelect">
+					 	<select name="lineType" class="mySelect">
 					    	<option data-line-type="line" selected="selected">Линия</option>
 					    	<option data-line-type="transformer">Трансформатор</option>
 					    </select>
@@ -113,7 +113,7 @@
 						</div>
 					</div>
 					<div class="rows">
-					 	<select name="lineType" id="mySelect">
+					 	<select name="lineType" class="mySelect">
 					    	<option data-line-type="line" selected="selected">Линия</option>
 					    	<option data-line-type="transformer">Трансформатор</option>
 					    </select>
@@ -137,7 +137,7 @@
 						</div>
 					</div>
 					<div class="rows">
-					 	<select name="lineType" id="mySelect">
+					 	<select name="lineType" class="mySelect">
 					    	<option data-line-type="line" selected="selected">Линия</option>
 					    	<option data-line-type="transformer">Трансформатор</option>
 					    </select>
@@ -161,7 +161,7 @@
 						</div>
 					</div>
 					<div class="rows">
-					 	<select name="lineType" id="mySelect">
+					 	<select name="lineType" class="mySelect">
 					    	<option data-line-type="line" selected="selected">Линия</option>
 					    	<option data-line-type="transformer">Трансформатор</option>
 					    </select>
@@ -185,7 +185,7 @@
 						</div>
 					</div>					
 					<div class="rows">
-					 	<select name="lineType" id="mySelect">
+					 	<select name="lineType" class="mySelect">
 					    	<option data-line-type="line" selected="selected">Линия</option>
 					    	<option data-line-type="transformer">Трансформатор</option>
 					    </select>
@@ -209,7 +209,7 @@
 						</div>
 					</div>
 					<div class="rows">
-					 	<select name="lineType" id="mySelect">
+					 	<select name="lineType" class="mySelect">
 					    	<option data-line-type="line" selected="selected">Линия</option>
 					    	<option data-line-type="transformer">Трансформатор</option>
 					    </select>
@@ -233,7 +233,7 @@
 						</div>
 					</div>
 					<div class="rows">
-					 	<select name="lineType" id="mySelect">
+					 	<select name="lineType" class="mySelect">
 					    	<option data-line-type="line" selected="selected">Линия</option>
 					    	<option data-line-type="transformer">Трансформатор</option>
 					    </select>
